--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./workbench/main.tsx"></script>
+    <script type="module" src="./workbench/main.ts"></script>
   </body>
 </html>
