Added rotation/scale properties. Lighting works with it, back face culling, and sorting due to moving things into shape space

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </style>
   </head>
   <body>
+    <button id="copy-svg">Copy SVG ✂️📋</button>
     <div id="root"></div>
     <script type="module" src="./workbench/main.ts"></script>
   </body>
