--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     </style>
   </head>
   <body>
-    <button id="copy-svg">Copy SVG ✂️📋</button>
+    <div id="buttons">
+      <button id="copy-svg">Copy SVG ✂️📋</button>
+      <button id="play-pause"></button>
+    </div>
     <div id="root"></div>
     <script type="module" src="./workbench/main.ts"></script>
   </body>
